--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": { "@components/*": ["component/*"], "@public/*": ["public/*"] }
+    "paths": { "@components/*": ["components/*"], "@public/*": ["public/*"] }
   }
 }
