fixed cookies:please avoid using vw and vh

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "@public/*": ["public/*"],
       "@lib/*": ["lib/*"],
       "@assets/*": ["assets/*"],
-      "@local/*": ["local/*"]
+      "@local/*": ["lib/local/*"]
     },
 
     "target": "es5",
